2015-01-16  Artur Malabarba  <bruce.connor.am@gmail.com>

	* emacs-lisp/package.el (package--read-pkg-desc): New
	function. Read a `define-package' form in current buffer. Return
	the pkg-desc, with desc-kind set to KIND.

2015-01-16  Jorgen Schaefer  <contact@jorgenschaefer.de>

	* emacs-lisp/package.el: Provide repository priorities.
	(package-archive-priorities): New variable.
	(package--add-to-alist): New function.
	(package--add-to-archive-contents): Use it.
	(package-menu--find-upgrades): Use it as well. Small clean up to
	make the use of the package name here explicit.
	(package-archive-priority): New function.
	(package-desc-priority-version): New function.

2015-01-16  Daniel Colascione  <dancol@dancol.org>

	* cus-start.el (all): Make `ring-bell-function' customizable.

2015-01-16  Dmitry Gutov  <dgutov@yandex.ru>

	* vc/vc-svn.el (vc-svn-dir-status-files): Pass t as
	vc-svn-after-dir-status's second argument.  (Bug#19429)

2015-01-16  Samer Masterson  <samer@samertm.com>  (tiny change)

	* pcomplete.el (pcomplete-parse-arguments): Parse arguments
	regardless of pcomplete-cycle-completions's value.  (Bug#18950)

2015-01-16  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* dom.el (dom-strings): New function.

	* files.el (directory-files-recursively): Don't use the word
	"path" for a file name.

2015-01-15  Wolfgang Jenkner  <wjenkner@inode.at>

	* calc/calc-units.el (math-units-in-expr-p)
	(math-single-units-in-expr-p, math-find-compatible-unit-rec)
	(math-extract-units): Handle the `neg' operator.  (Bug#19582)

2015-01-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/cl-macs.el (cl--labels-magic): New constant.
	(cl--labels-convert): Use it to ask the macro what is its replacement
	in the #'f case.

	* emacs-lisp/cl-generic.el (cl--generic-build-combined-method):
	Return the value of the primary rather than the after method.

	* emacs-lisp/eieio-core.el: Provide support for cl-generic.
	(eieio--generic-tagcode): New function.